--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -1,12 +1,50 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Miguel angel Luque Fernandez at 2016-11-01 15:21:14 +0000 
+%% Created for Miguel angel Luque Fernandez at 2016-11-04 23:41:18 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{van2006,
+	Author = {van der Laan, Mark J and Rubin, Daniel},
+	Date-Added = {2016-11-04 23:41:05 +0000},
+	Date-Modified = {2016-11-04 23:41:16 +0000},
+	Journal = {The International Journal of Biostatistics},
+	Number = {1},
+	Title = {Targeted maximum likelihood learning},
+	Volume = {2},
+	Year = {2006}}
+
+@article{lunceford2004,
+	Author = {Lunceford, Jared K. and Davidian, Marie},
+	Date-Added = {2016-11-04 23:09:47 +0000},
+	Date-Modified = {2016-11-04 23:14:37 +0000},
+	Doi = {10.1002/sim.1903},
+	Issn = {1097-0258},
+	Journal = {Statistics in Medicine},
+	Number = {19},
+	Pages = {2937--2960},
+	Publisher = {John Wiley &amp; Sons, Ltd.},
+	Title = {Stratification and weighting via the propensity score in estimation of causal treatment effects: a comparative study},
+	Url = {http://dx.doi.org/10.1002/sim.1903},
+	Volume = {23},
+	Year = {2004},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/sim.1903}}
+
+@article{rosenbaum1983,
+	Author = {Rosenbaum, Paul R and Rubin, Donald B},
+	Date-Added = {2016-11-04 23:06:43 +0000},
+	Date-Modified = {2016-11-04 23:06:53 +0000},
+	Journal = {Biometrika},
+	Number = {1},
+	Pages = {41--55},
+	Publisher = {Biometrika Trust},
+	Title = {The central role of the propensity score in observational studies for causal effects},
+	Volume = {70},
+	Year = {1983}}
 
 @article{efron1983,
 	Author = {Efron, Bradley and Gong, Gail},
