--- a/TMLE.Rmd
+++ b/TMLE.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Targeted Maximum Likelihood Estimation for a Binary Outcome: Tutorial and Guided Implementation"
 author: 'By: Miguel Angel Luque Fernandez'
-date: "November 8th, 2016"
+date: "March 21st, 2017"
 output:
   html_notebook:
     code_folding: show
@@ -133,7 +133,7 @@ The Stable Unit Treatment Value Assumption (SUTVA) incorporates
 both this idea that **units do not interfere** with one another, and also the concept that for each unit there is only a **single version of each treatment level**.      
 
 #TMLE flow chart 
-![](Figures/tmle.png)
+![](Figures/steps.png)
 **Figure 2**. TMLE flow chart (Road map)  
 **Adapted from**: Mark van der Laan and Sherri Rose. Targeted learning: causal inference for observational and experimental dataSpringer Series in Statistics, 2011.  
 
@@ -152,7 +152,7 @@ The simulated data replicationg the DAG in Figure 1:
 4. W3: Cancer TNM classification (scale from 1 to 4)  
 5. W4: Comorbidities (scale from 1 to 5)  
 
-```{r}
+```{r warning=FALSE}
 options(digits=4)
 generateData <- function(n){
   w1 <- rbinom(n, size=1, prob=0.5)
@@ -221,10 +221,10 @@ Q  <- cbind(QAW = predict(m),
             Q1W = predict(m, newdata=data.frame(A = 1, w1, w2, w3, w4)),
             Q0W = predict(m, newdata=data.frame(A = 0, w1, w2, w3, w4)))
 Q0 <- as.data.frame(Q)
-Y1<-Q0$Q1W 
-Y0<-Q0$Q0W
-QA1<-exp(Y1)/(1+exp(Y1))
-QA0<-exp(Y0)/(1+exp(Y0))
+Y1 <- Q0$Q1W 
+Y0 <- Q0$Q0W
+QA1 <- exp(Y1)/(1+exp(Y1))
+QA0 <- exp(Y0)/(1+exp(Y0))
 #Inverse logit (probability scale)
 psi <- (exp(Y1)/(1+exp(Y1)) - exp(Y0)/(1+exp(Y0)))
 Psi <- mean(exp(Y1)/(1+exp(Y1)) - exp(Y0)/(1+exp(Y0))); cat("\n Q0:", Psi)
@@ -238,10 +238,10 @@ datatable(head(df, n = nrow(df)), options = list(pageLength = 5, digits = 3))
 ##Step 2: $g_{0}(A,W)$
 Estimation of the probability of the treatment (A) given the set of covariates (W), denoted as $g_{0}(A,W)$. We can use again a logistic regression model and to improve the prediction algorithm we can use the Super-Learner library or any other machine learning strategy:  
 
-$$\text{logit}[P(A=1|W)]\,=\,\beta_{0}\,+\,\beta_{1}^{T}W.$$ 
+$$\text{logit}[P(A=1|W)]\,=\,\alpha_{0}\,+\,\alpha_{1}^{T}W.$$ 
 Then, we estimate the predicted probability of P(A|W) = $\hat{g}(1,W)$ using:  
 
-$$\hat{g}(1,W)\,=\,\text{expit}\,(\hat{\beta_{0}}\,+\,\hat{\beta_{1}^{T}}W).$$ 
+$$\hat{g}(1,W)\,=\,\text{expit}\,(\hat{\alpha_{0}}\,+\,\hat{\alpha_{1}^{T}}W).$$ 
 
 ```{r}
 g <- glm(A ~ w2 + w3 + w4, family = binomial)
@@ -258,11 +258,11 @@ $$\bar{Q^{1}}(0,W)\,=\,\text{expit}\left[\text{logit}\left(\bar{Q^{0}}(A,W)\righ
 
 $$\bar{Q^{1}}(1,W)\,=\,\text{expit}\left[\text{logit}\left(\bar{Q^{0}}(A,W)\right)\,+\,\hat{\epsilon_{1}}H_{1}(1,W)\right]$$
 Where,
-$$H_{0}(A,W)\,=\,\frac{I(A=0)}{\hat{g}(0|W)}\;\text{and},\;H_{1}(A,W)\,=\,\frac{I(A=1)}{\hat{g}(1|W)}$$ are the stabilized inverse probability of treatment (A) weights (IPTW), namelly the **clever covariates** and **I** defines an indicator function (note that $\hat{g}(A|W)$ is estimted from step 2).  
+$$H_{0}(A,W)\,=\,-\frac{I(A=0)}{\hat{g}(0|W)}\;\text{and},\;H_{1}(A,W)\,=\,\frac{I(A=1)}{\hat{g}(1|W)}$$ are the stabilized inverse probability of treatment (A) weights (IPTW), namelly the **clever covariates** and **I** defines an indicator function (note that $\hat{g}(A|W)$ is estimted from step 2).  
 
 ```{r}
 #Clever covariate and fluctuating/substitution paramteres
-h <- cbind(gAW=(A/g1W -(1-A)/(1-g1W)), g1W=(1/g1W), g0W=(-1/(1-g1W)))
+h <- cbind(gAW=(A/g1W - (1 - A) / (1 - g1W)), g1W = (1/g1W), g0W=(-1 / (1 - g1W)))
 epsilon <- coef(glm(Y ~ -1 + h[,1] + offset(Q[,"QAW"]), family = binomial));cat("\n Epsilon:",epsilon)
 df <- round(cbind(Q0,PS=(g1W),H=(h),epsilon), digits= 4)
 ```
@@ -312,7 +312,7 @@ $$\sigma({\psi_{0}})=\sqrt{\frac{Var(IC_{n})}{n}}.  (3)$$
 
 ```{r}
 Q  <- as.data.frame(Q)
-IC <- h[,1]*(Y-Q$QAW) + Q$Q1W - Q$Q0W - Psi;summary(IC)
+IC <- h[,1]*(Y-plogis(Q$QAW)) + plogis(Q$Q1W - Q$Q0W) - Psi;summary(IC)
 n <- nrow(ObsData)
 varHat.IC <- var(IC)/n; varHat.IC
 
@@ -334,12 +334,12 @@ cat("\n Relative_TMLE.SI_bias:",abs(True_Psi-Psi)/True_Psi*100,"%")
 $$\psi_{0}^{AIPTW-ATE}\ \ =\ \frac{1}{n}\sum_{i=1}^{n}\left(\frac{I\left(A_{i}=1\right)}{g_n\left(1\left|W_{i}\right)\right)}\ -\ \frac{I\left(A_{i}=0\right)}{g_n\left(0\left|W_{i}\right)\right)}\ \right)\left[Y_{i}-\bar{Q}_{n}^{0}\left(A_{i},W_{i}\right)\right]+\frac{1}{n}\sum_{i=1}^{n}\bar{Q}_{n}^{0}\left(1,\ W_{i}\right)-\bar{Q}_{n}^{0}\left(0,\ W_{i}\right). (4)$$
 
 ```{r}
-AIPTW <- mean((h[,1]*(Y-Q$QAW))+(Q$Q1W-Q$Q0W)); AIPTW
-cat("\n AIPTW_bias:", abs(True_Psi-AIPTW))
-cat("\n Relative_AIPTW_bias:",abs(True_Psi-AIPTW)/True_Psi*100,"%")
+AIPTW <- mean((h[,1]*(Y - plogis(Q$QAW)) + (plogis(Q$Q1W) - plogis(Q$Q0W))));AIPTW
+cat("\n AIPTW_bias:", abs(True_Psi - AIPTW))
+cat("\n Relative_AIPTW_bias:",abs(True_Psi - AIPTW) / True_Psi*100,"%")
 ```
 
-Compared with AIPTW, TMLE showed smaller relative bias.  
+Compared with AIPTW, TMLE showed similar relative bias.  
 
 #TMLE using the Super-Learner 
 
@@ -364,7 +364,7 @@ library(SuperLearner)
 #Specify SuperLearner libraries
 SL.library <- c("SL.glm","SL.step","SL.glm.interaction")
 #Data frame with X with baseline covariates and exposure A
-X <- subset(ObsData, select=c(A, w1, w2, w3, w4))
+X <- subset(ObsData, select = c(A, w1, w2, w3, w4))
 n <- nrow(ObsData)
 #Create data frames with A=1 and A=0
 X1<-X0<-X
@@ -373,7 +373,7 @@ X0$A <-0
 #Create new data by stacking X, X1, and X0
 newdata <- rbind(X,X1,X0)
 #Call superlearner
-Qinit <- SuperLearner(Y=ObsData$Y, X=X, newX=newdata, SL.library=SL.library, family="binomial")
+Qinit <- SuperLearner(Y = ObsData$Y, X = X, newX = newdata, SL.library=SL.library, family="binomial")
 Qinit
 #Predictions
 #Pred prob of mortality (Y) given A, W
@@ -383,7 +383,7 @@ Qbar1W <- Qinit$SL.predict[(n+1):(2*n)]
 #Pred prob of dying for each subject given A=0 and w
 Qbar0W <- Qinit$SL.predict[(2*n+1):(3*n)]
 #Simple substitution estimator Psi(Q0)
-PsiHat.SS <- mean(Qbar1W-Qbar0W);PsiHat.SS
+PsiHat.SS <- mean(Qbar1W - Qbar0W);PsiHat.SS
 ```
 
 2. **Step two**: $g_{0}(A,W)$ prediction
@@ -391,12 +391,12 @@ PsiHat.SS <- mean(Qbar1W-Qbar0W);PsiHat.SS
 ```{r, warning=FALSE}
 #Step 2 g_0(A|W) with SuperLearner
 w <- subset(ObsData, select=c(w1,w2,w3,w4))
-gHatSL <- SuperLearner(Y=ObsData$A, X=w, SL.library=SL.library, family = binomial)
+gHatSL <- SuperLearner(Y=ObsData$A, X = w, SL.library = SL.library, family = binomial)
 gHatSL;mean(gHatSL)
 
 #Generate the pred prob of A=1 and, A=0 given covariates
 gHat1W <- gHatSL$SL.predict
-gHat0W <- 1-gHat1W
+gHat0W <- 1 - gHat1W
 
 #Step 3: Clever covariate
 HAW <- as.numeric(ObsData$A==1)/gHat1W - as.numeric(ObsData$A==0)/gHat0W;mean(HAW)
@@ -407,7 +407,7 @@ H0W <- -1/gHat0W
 
 ```{r}
 #Step 4: Substitution estimaiton Q* of the ATE.
-logitUpdate <- glm(ObsData$Y ~ -1 + offset(qlogis(QbarAW))+HAW, family='binomial')
+logitUpdate <- glm(ObsData$Y ~ -1 + offset(qlogis(QbarAW)) + HAW, family='binomial')
 eps <- logitUpdate$coef;eps
 #Calculating the predicted values for each subject under each treatment A=1, A=0
 QbarAW.star <- plogis(qlogis(QbarAW)+eps*HAW)
@@ -415,9 +415,10 @@ Qbar1W.star <- plogis(qlogis(Qbar1W)+eps*H1W)
 Qbar0W.star <- plogis(qlogis(Qbar0W)+eps*H0W)
 PsiHat.TMLE.SL <- mean(Qbar1W.star) - mean(Qbar0W.star)
 cat("PsiHat.TMLE.SL:", PsiHat.TMLE.SL)
-cat("\n PsiHat.TMLE.SL_bias:", abs(True_Psi-PsiHat.TMLE.SL))
-cat("\n Relative_PsiHat.TMLE.SL_bias:",abs(True_Psi-PsiHat.TMLE.SL)/True_Psi*100,"%")
+cat("\n PsiHat.TMLE.SL_bias:", abs(True_Psi - PsiHat.TMLE.SL))
+cat("\n Relative_PsiHat.TMLE.SL_bias:",abs(True_Psi - PsiHat.TMLE.SL)/True_Psi*100,"%")
 ```
+TMLE with machine learning algorithms decreases bias compared with the previous AIPTW and TMLE (without Super Learner) estimators.
 
 #R-TMLE
 
@@ -426,7 +427,8 @@ Using the R-package **tmle**.
 The basic implementation of TMLE in the R-package **tmle** uses by default three algorithms:      
 1. SL.glm (main terms logistic regression of A and W),    
 2. SL.step (stepwise forward and backward model selection using AIC criterion, restricted to second order polynomials) and,  
-3. SL.glm.interaction (a glm variant that includes second order polynomials and two by two interactions of the main terms included in the model).    
+3. SL.glm.interaction (a glm variant that includes second order polynomials and two by two interactions of the main terms included in the model). 
+
 
 ```{r}
 library(tmle)
@@ -436,10 +438,11 @@ cat("TMLER_Psi:", tmle$estimates[[2]][[1]],";","95%CI(", tmle$estimates[[2]][[3]
 cat("\n TMLE_bias:", abs(True_Psi-tmle$estimates[[2]][[1]]))
 cat("\n Relative_TMLE_bias:",abs(True_Psi-tmle$estimates[[2]][[1]])/True_Psi*100,"%")
 ```
+In addition TMLE bounds by default to (0.025 and 0.975) the propensity score distribution to decrease the impact of near-positivity violations. It is why the bias using the TMLE-R package decreases from 0.7354 to 0.7108
 
-#R-TMLE improving prediction
+#R-TMLE decreasing bias by calling more advanced machine-learning libraries
 
-In addition to the default algorithms implemented in the R-tmle package, we can improve our estimation calling more efficient machine learing algorithms, such as generalized additive models, the Random Forest and, Recursive Partitioning and Regression Trees:    
+In addition to the default algorithms implemented in the R-tmle package, we can even decrease more the bias of our estimation by calling more efficient machine learing algorithms, such as generalized additive models, the Random Forest and, Recursive Partitioning and Regression Trees:    
 
 ```{r}
 SL.TMLER.Psi <- tmle(Y=Y, A=A, W=w, family="binomial", 
@@ -493,9 +496,7 @@ $$ (Y \,-\, \bar Q(A, W))^{2}$$
 The **SL** algorithm first split the data into ten blocks and fits each of the selected algoriths on the training set (non-shaded blocks), then predicts the estimated probabilities of the outcome (Y) using the validation set (shaded block) for each algorithm, based on the corresponding training set. Afterwards, the **SL** estimates the the cross-validating risk for each algorithm averaging the risks across validation sets resulting in one estimated cross-validated risk for each algorithm. Finally, the **SL** selects the combination of Z that minimises the cross-validation risk, defined as the minimum mean square error for each of the selected algorithms using Y and Z. A weighted combination of the algorithms (ensemble learning) in Z is then used to predict the outcome (Y) (see Figure 5).  
 
 ![](Figures/SL.png)
-
 **Figure 5**: Flow Diagram for the Super-Learner algorithm.  
-**Adapted from**: Mark van der Laan and Sherri Rose. Targeted learning: causal inference for observational and experimental dataSpringer Series in Statistics, 2011. 
 
 #Abbreviations
 
@@ -538,7 +539,7 @@ Thank you for participating in this tutorial.
 If you have updates or changes that you would like to make, please send <a href="https://github.com/migariane/MALF" target="_blank">me</a> a pull request.
 Alternatively, if you have any questions, please e-mail me. 
 You can cite this repository as:        
-Luque-Fernandez MA, (2016). Taregeted Maximum Likelihood Estimation for a Binary Outcome: Tutorial and Guided Implementation. GitHub repository, http://migariane.github.io/TMLE.nb.html.    
+Luque-Fernandez MA, (2017). Taregeted Maximum Likelihood Estimation for a Binary Outcome: Tutorial and Guided Implementation. GitHub repository, http://migariane.github.io/TMLE.nb.html.    
 **Miguel Angel Luque Fernandez**     
 **E-mail:** *miguel-angel.luque at lshtm.ac.uk*  
 **Twitter** `@WATZILEI`  
