--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Miguel angel Luque Fernandez at 2016-11-05 13:50:57 +0000 
+%% Created for MALF at 2019-04-28 16:11:04 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{fisher2018,
+	Author = {Fisher, Aaron and Kennedy, Edward H},
+	Date-Added = {2019-04-28 16:08:13 -0700},
+	Date-Modified = {2019-04-28 16:10:23 -0700},
+	Journal = {arXiv preprint arXiv:1810.03260},
+	Title = {Visually communicating and teaching intuition for influence functions},
+	Year = {2018}}
 
 @article{Rubin2005,
 	Abstract = { Causal effects are defined as comparisons of potential outcomes under different treatments on a common set of units. Observed values of the potential outcomes are revealed by the assignment mechanism---a probabilistic model for the treatment each unit receives as a function of covariates and potential outcomes. Fisher made tremendous contributions to causal inference through his work on the design of randomized experiments, but the potential outcomes perspective applies to other complex experiments and nonrandomized studies as well. As noted by Kempthorne in his 1976 discussion of Savage's Fisher lecture, Fisher never bridged his work on experimental design and his work on parametric modeling, a bridge that appears nearly automatic with an appropriate view of the potential outcomes framework, where the potential outcomes and covariates are given a Bayesian distribution to complete the model specification. Also, this framework crisply separates scientific inference for causal effects and decisions based on such inference, a distinction evident in Fisher's discussion of tests of significance versus tests in an accept/reject framework. But Fisher never used the potential outcomes framework, originally proposed by Neyman in the context of randomized experiments, and as a result he provided generally flawed advice concerning the use of the analysis of covariance to adjust for posttreatment concomitants in randomized trials. },
