--- a/TMLE.Rmd
+++ b/TMLE.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Targeted Maximum Likelihood Estimation for a Binary Outcome: Tutorial and Guided Implementation"
 author: 'By: Miguel Angel Luque Fernandez'
-date: "June 20th, 2017"
+date: "Last update: April 5, 2019"
 output:
   html_notebook:
     code_folding: show
@@ -13,9 +13,9 @@ output:
       collapsed: no
       smooth_scroll: yes
       toc_depth: 3
-  html_document:
-    toc: yes
   pdf_document:
+    toc: yes
+  html_document:
     toc: yes
 font-family: Risque
 font-import: http://fonts.googleapis.com/css?family=Risque
@@ -48,7 +48,7 @@ knitr::opts_chunk$set(eval = TRUE,
 library('tmle', 'SuperLearner', 'DT')
 ```
 
-#Introduction
+# Introduction
 
 During the last 30 years, **modern epidemiology** has been able to identify significant limitations of classic epidemiologic methods when the focus is to explain the main effect of a risk factor on a disease or outcome.  
 
@@ -66,7 +66,7 @@ Classical epidemiologic methods use regression adjustment to explain the main ef
 
 James Robins in 1986 demonstrated that using the **G-formula** a generalization of the **standardisation**, allows obtaining a unconfounded marginal estimation of the ATE under causal untestable assumptions, namely conditional mean independence, positivity and consistency or stable unit treatment value assignment (SUTVA) [@robins1986], [@robins2000]:      
   
-#The G-Formula and ATE estimation
+# The G-Formula and ATE estimation
 
 $$\psi(P_{0})\,=\,\sum_{w}\,\left[\sum_{y}\,P(Y=y\mid A=1,W=w)-\,\sum_{y}\,P(Y = y\mid A=0,W=w)\right]P(W=w)$$  
 
@@ -87,7 +87,7 @@ Furthermore, when analyizing observational data with a large number of variables
 
 However, Mark van der Laan and Rubin [@van2006] introduced in 2006 a **double-robust** estimation procedure to **reduce bias** against misspecification. The targeted maximum likelihood estimation (**TMLE**) is a semiparametric, efficient substitution estimator [@van2011].      
 
-#TMLE
+# TMLE
 
 **TMLE** allows for data-adaptive estimation while obtaining valid statistical inference based on the targeted minimum loss-based estimation and machine learning algorithms to minimise the risk of model misspecification [@van2011]. The main characteristics of **TMLE** are:      
 
@@ -104,7 +104,7 @@ However, Mark van der Laan and Rubin [@van2006] introduced in 2006 a **double-ro
 6. The general formula to estimate the ATE using the TMLE method:  
 
 $$\psi TMLE,n = \Psi(Q_{n}^{*})= {\frac{1}{n}\sum_{i=1}^{n}\bar{Q}_{n}^{1}\left(1,\ W_{i}\right)-\bar{Q}_{n}^{1}\left(0,\ W_{i}\right)}.  (1)$$
-7. The efficient influcence curve (IC) based on Hampel seminal paper [@hampel1974] is applied for statistical inference using TMLE:  
+7. The efficient influcence curve (IC) based on the Functional Delta Method and Empirical Process Theory [@fisher2018] is applied for statistical inference using TMLE:  
 
 $$IC_{n}(O_{i})=\left(\frac{I\left(A_{i}=1\right)}{g_n\left(1\left|W_{i}\right)\right)}\ -\ \frac{I\left(A_{i}=0\right)}{g_n\left(0\left|W_{i}\right)\right)}\ \right)\left[Y_{i}-\bar{Q}_{n}^{1}\left(A_{i},W_{i}\right)\right]+\bar{Q}_{n}^{1}\left(1,\ W_{i}\right)-\bar{Q}_{n}^{1}\left(0,\ W_{i}\right) - \psi TMLE,n. (2)$$  
 where the variance of the ATE:  
@@ -113,39 +113,39 @@ $$\sigma({\psi_{0}})=\sqrt{\frac{Var(IC_{n})}{n}}.  (3)$$
 
 8. The procedure is available with standard software such as the **tmle** package in R  [@gruber2011]. 
 
-#Structural causal framework
+# Structural causal framework
 
-##Direct Acyclic Graph (DAG)
+## Direct Acyclic Graph (DAG)
 ![](Figures/DAG.png)
 **Figure 1**. Direct Acyclic Graph (DAG)  
 **Source**: Miguel Angel Luque-Fernandez  
 
-##DAG interpretation 
+## DAG interpretation 
 
 The ATE is interpreted as the population risk difference in one-year mortality for laryngeal cancer patients treated with chemotherapy versus radiotherapy. Under causal assumptions, and compared with radiotherapy, the risk difference of one-year mortality for patients treated with chemotherapy increases by approximately **20%**. 
 
-#Causal assumptions 
+# Causal assumptions 
 To estimate the value of the true causal target parameter $\psi(P_{0})$ with a model for the true data generation process $P_{0}$ under the counterfactual framework augmented additional untestable cuasal assumptions have to be considered [@rubin2011], [@van2011]:          
 
-##CMI or Randomization 
+## CMI or Randomization 
 ($Y_{0},Y_{1}\perp$A|W) or conditional mean independence (CMI) of the binary treatment effect (A) on the outcome (Y) given the set of observed covariates (W), where W = (W1,  W2, W3, … , $\text{W}_{k}$).  
 
-##Positivity   
+## Positivity   
 a ϵ A: P(A=a | W) > 0   
 P(A=1|W=w) > 0 and P(A=0| W = w) > 0 for each possible w.      
 
-##Consistency or SUTVA  
+## Consistency or SUTVA  
 The Stable Unit Treatment Value Assumption (SUTVA) incorporates
 both this idea that **units do not interfere** with one another, and also the concept that for each unit there is only a **single version of each treatment level**.      
 
-#TMLE flow chart 
+# TMLE flow chart 
 ![](Figures/steps.png)
 **Figure 2**. TMLE flow chart (Road map)  
 **Adapted from**: Mark van der Laan and Sherri Rose. Targeted learning: causal inference for observational and experimental dataSpringer Series in Statistics, 2011.  
 
-#Data generation
+# Data generation
 
-##Simulation 
+## Simulation 
 
 In R we create a function to generate the data. The function will have as input **number of draws** and as output the generated **observed data** (ObsData) including the counterfactuals (Y1, Y0).  
 
@@ -176,7 +176,7 @@ generateData <- function(n){
   data.frame(w1, w2, w3, w4, A, Y, Y.1, Y.0)
 }
 set.seed(7777)
-ObsData <- generateData(n=10000)
+ObsData <- generateData(n=1000)
 True_Psi <- mean(ObsData$Y.1-ObsData$Y.0);
 cat(" True_Psi:", True_Psi)
 Bias_Psi <- lm(data=ObsData, Y~ A + w1 + w2 + w3 + w4)
@@ -186,7 +186,7 @@ Naive_Bias <- ((summary(Bias_Psi)$coef[2, 1])-True_Psi); cat("\n Naives bias:", 
 Naive_Relative_Bias <- (((summary(Bias_Psi)$coef[2, 1])-True_Psi)/True_Psi)*100; cat("\n Relative Naives bias:", Naive_Relative_Bias,"%")
 ```
 
-##Data visualization
+## Data visualization
 
 ```{r}
 # DT table = interactive
@@ -195,9 +195,9 @@ library(DT)
 datatable(head(ObsData, n = nrow(ObsData)), options = list(pageLength = 5, digits = 2))
 ```
 
-#TMLE simple implementation
+# TMLE simple implementation
 
-##Step 1: $Q_{0}$(A,**W**)
+## Step 1: $Q_{0}$(A,**W**)
 Estimation of the initial probability of the outcome (Y) given the treatment (A) and the set of covariates (W), denoted as $Q_{0}$(A,**W**). To estimate $Q_{0}$(A,**W**) we can use a standard logistic regression model: 
 
 $$\text{logit}[P(Y=1|A,W)]\,=\,\beta_{0}\,+\,\beta_{1}A\,+\,\hat{\beta_{2}^{T}}W.$$ 
@@ -241,7 +241,7 @@ df <- round(cbind(Logit=(Q),Pr.Y1=QA1,Pr.Y0=QA0,Psi=psi), digits= 3)
 ```{r, warning=FALSE}
 datatable(head(df, n = nrow(df)), options = list(pageLength = 5, digits = 3))
 ```
-##Step 2: $g_{0}(A,W)$
+## Step 2: $g_{0}(A,W)$
 Estimation of the probability of the treatment (A) given the set of covariates (W), denoted as $g_{0}(A,W)$. We can use again a logistic regression model and to improve the prediction algorithm we can use the Super-Learner library or any other machine learning strategy:  
 
 $$\text{logit}[P(A=1|W)]\,=\,\alpha_{0}\,+\,\alpha_{1}^{T}W.$$ 
@@ -254,7 +254,7 @@ g <- glm(A ~ w2 + w3 + w4, family = binomial)
 g1W = predict(g, type ="response");cat("\n Propensity score = g1W","\n");summary(g1W)
 ```
 
-##Step 3: HAW and $\epsilon$
+## Step 3: HAW and $\epsilon$
 This step aims to find a better prediction model targeted at minimising the mean squared error (MSE) for the potential outcomes. For the ATE on step convergence is guaranteed given $\bar{Q}^{0}$ and $\hat{g}(1,W)$.  
 
 The fluctuation parameters $(\hat{\epsilon}_{0}\,,\,\hat{\epsilon}_{1})$ are estimated using maximum likelihood procedures by setting $\text{logit}(\bar{Q^{0}}(A,W))$ as an offset in a intercept-free logistic regression with $H_{0}$ and $H_{1}$ as independent variables:      
@@ -278,7 +278,7 @@ df <- round(cbind(Q0,PS=(g1W),H=(h),epsilon), digits= 4)
 datatable(head(df, n = nrow(df)), options = list(pageLength = 5, digits = 3))
 ```
 
-##Step 4 $\bar{Q_{n}}^{*}:\text{from}\,\bar{Q_{0}}^{0}\,\text{to}\,\bar{Q_{1}}^{1}$
+## Step 4 $\bar{Q_{n}}^{*}:\text{from}\,\bar{Q_{0}}^{0}\,\text{to}\,\bar{Q_{1}}^{1}$
 
 Afterwards, the estimated probability of the potential outcomes is updated by the substitution parameters $(\hat{\epsilon_{0}}\,,\,\hat{\epsilon_{1}})$. The substitution update is performed by setting A = 0 and A = 1 for each subject in the initial estimate probability of the potential outcomes $\bar{Q^{0}}(0,W)\,,\,\bar{Q^{0}}(1,W)$, as well as in the clever covariates $H_{0}(0,W)\;\text{and}\; H_{1}(1,W)$. 
 
@@ -305,15 +305,56 @@ datatable(head(df, n = nrow(df)), options = list(pageLength = 5, digits = 3))
 cat("\n Psi first row:", plogis((0.0012*1.2399) + (2.3678)) - (plogis((0.0012*-5.1681) + (1.3413))))
 ```
 
-##Step 5: Inference
-TMLE uses the efficient influence curve (IC) for inference (i.e., to obtain standard errors for $\psi$).   
+## Step 5: Inference
+Recall that the asymptotic distribution of TMLE estimators has been studied
+thoroughly:
 
-$$IC_{n}(O_{i})\ \ =\ \left(\frac{I\left(A_{i}=1\right)}{g_n\left(1\left|W_{i}\right)\right)}\ -\ \frac{I\left(A_{i}=0\right)}{g_n\left(0\left|W_{i}\right)\right)}\ \right)\left[Y_{i}-\bar{Q}_{n}^{1}\left(A_{i},W_{i}\right)\right]+\bar{Q}_{n}^{1}\left(1,\ W_{i}\right)-\bar{Q}_{n}^{1}\left(0,\ W_{i}\right) - \psi TMLE,n. (2)$$
+$$\psi_n - \psi_0 = (P_n - P_0) \cdot D(\bar{Q}_n^*, g_n) + R(\hat{P}^*, P_0),$$
+
+which, provided the following two conditions:
+
+1. If $D(\bar{Q}_n^*, g_n)$ converges to $D(P_0)$ in $L_2(P_0)$ norm, and
+2. the size of the class of functions considered for estimation of $\bar{Q}_n^*$
+   and $g_n$ is bounded (technically, $\exists \mathcal{F}$ st
+   $D(\bar{Q}_n^*, g_n) \in \mathcal{F}$ *__whp__*, where $\mathcal{F}$ is a
+   Donsker class), readily admits the conclusion that
+   
+$\psi_n - \psi_0 = (P_n - P_0) \cdot D(P_0) + R(\hat{P}^*, P_0)$.
+
+Under the additional condition that the remainder term $R(\hat{P}^*, P_0)$
+decays as $o_P \left( \frac{1}{\sqrt{n}} \right),$ we have that
+$$\psi_n - \psi_0 = (P_n - P_0) \cdot D(P_0) + o_P \left( \frac{1}{\sqrt{n}}
+ \right),$$
+which, by a central limit theorem, establishes a Gaussian limiting distribution
+for the estimator:
+
+$$\sqrt{n}(\psi_n - \psi) \to N(0, V(D(P_0))),$$
+
+where $V(D(P_0))$ is the variance of the efficient influence curve (canonical
+gradient) when $\psi$ admits an asymptotically linear representation.
+
+The above implies that $\psi_n$ is a $\sqrt{n}$-consistent estimator of $\psi$,
+that it is asymptotically normal (as given above), and that it is locally
+efficient. This allows us to build Wald-type confidence intervals in a
+straightforward manner:
+
+$$\psi_n \pm z_{\alpha} \cdot \frac{\sigma_n}{\sqrt{n}},$$
+
+where $\sigma_n^2$ is an estimator of $V(D(P_0))$. The estimator $\sigma_n^2$
+may be obtained using the bootstrap or computed directly via the following
+
+$$\sigma_n^2 = \frac{1}{n} \sum_{i = 1}^{n} D^2(\bar{Q}_n^*, g_n)(O_i)$$
+
+Having now re-examined these facts, let's simply apply it to the estimation of the standard errors for $\psi$. TMLE uses the efficient influence curve (IC) for inference (i.e., to obtain standard errors for $\psi$).   
+
+$$IC_{n}(O_{i})\ \ =\ \left(\frac{I\left(A_{i}=1\right)}{g_n\left(1\left|W_{i}\right)\right)}\ -\ \frac{I\left(A_{i}=0\right)}{g_n\left(0\left|W_{i}\right)\right)}\ \right)\left[Y_{i}-\bar{Q}_{n}^{1}\left(A_{i},W_{i}\right)\right]+\bar{Q}_{n}^{1}\left(1,\ W_{i}\right)-\bar{Q}_{n}^{1}\left(0,\ W_{i}\right) - \psi TMLE,n.$$
 
 where the standard deviation for $\psi$ is estimated as follows:  
 
-$$\sigma({\psi_{0}})=\sqrt{\frac{Var(IC_{n})}{n}}.  (3)$$
-**Note**: see appendix two for a short introduction to the theory of the Influence Curve.   
+$$\sigma({\psi_{0}})=\sqrt{\frac{Var(IC_{n})}{n}}.$$
+
+**Note**: please see here below the link to a tutorial introducing the use of the functional **Delta Method** which form the basis for the interpretation and understanding of the Influence Curve rooted in Robust Statistics and Empirical Process Theory.   
+
 
 ```{r}
 Q  <- as.data.frame(Q)
@@ -330,7 +371,7 @@ cat("\n TMLE.SI_bias:", abs(True_Psi-Psi))
 cat("\n Relative_TMLE.SI_bias:",abs(True_Psi-Psi)/True_Psi*100,"%")
 ```
 
-#TMLE vs. AIPTW
+# TMLE vs. AIPTW
 1. The advantages of **TMLE** have repeatedly been demonstrated in both simulation studies and applied analyses [@van2011]. 
 
 2. Evidence shows that **TMLE** provides the less unbiased ATE estimate compared with other double-robust estimators [@neu2005], [@van2011] such as the combination of regression adjustment with inverse probability of treatment weighting (IPTW-RA) and the augmented inverse probability of treatment weighting (AIPTW). The **AIPTW** estimation is a two-step procedure with two equations (propensity score and mean outcome equations).  
@@ -347,7 +388,7 @@ cat("\n Relative_AIPTW_bias:",abs(True_Psi - AIPTW) / True_Psi*100,"%")
 
 The simple TMLE algorithm shows similar relative bias than AIPTW. However, here below, we can see that TMLE performance, compared with AIPTW, improves when calling the Super-Learner and ensemble learning techniques integrated into the TMLE algorithm.
 
-#TMLE using the Super-Learner 
+# TMLE using the Super-Learner 
 
 With TMLE we can call the Super-Learner (SL). The SL is a R-package using V-fold cross-validation and ensembled learning (prediction using all the predictions of multiple stacked learning algorithms) techniques to improve model prediction performance [@breiman1996].  
 
@@ -360,7 +401,8 @@ The principal interest of calling the Super-Learner is to obtain the less-unbias
 $$\bar Q_{0}\,=\, \text{arg min}_{\bar Q}E_{0}L(O, \bar Q),$$   
 where $L(O, \bar Q)$ is:
 $$ (Y \,-\, \bar Q(A, W))^{2}$$
-**Note**: see appendix one for a short introduction to the Super-Learner and ensemble learning techniques. 
+
+**Note**: see the appendix for a short introduction to the Super-Learner and ensemble learning techniques. 
 
 1. **Step One**: $\bar Q_{n}^{0}(A,W)$ prediction
 
@@ -398,7 +440,7 @@ PsiHat.SS <- mean(Qbar1W - Qbar0W);PsiHat.SS
 #Step 2 g_0(A|W) with SuperLearner
 w <- subset(ObsData, select=c(w1,w2,w3,w4))
 gHatSL <- SuperLearner(Y=ObsData$A, X = w, SL.library = SL.library, family = binomial)
-gHatSL;mean(gHatSL)
+gHatSL
 
 #Generate the pred prob of A=1 and, A=0 given covariates
 gHat1W <- gHatSL$SL.predict
@@ -426,7 +468,7 @@ cat("\n Relative_PsiHat.TMLE.SL_bias:",abs(True_Psi - PsiHat.TMLE.SL)/True_Psi*1
 ```
 TMLE with machine learning algorithms decreases bias compared with the previous AIPTW and TMLE (without Super Learner) estimators.
 
-#R-TMLE
+# R-TMLE
 
 Using the R-package **tmle**.  
 
@@ -447,7 +489,7 @@ cat("\n Relative_TMLE_bias:",abs(True_Psi-tmle$estimates[[2]][[1]])/True_Psi*100
 ```
 TMLE implementation in the R-package **tmle** improves the estimation of the inverse-propability of treatment weights. It bounds by default the distribution of the weights for the propensity score to (0.025th and 0.975th percentiles) to decrease the impact of near-positivity violations. Also, note that at each time that we run the super-learner the V-fold cross-validation splits the data randomly. So, we have to set a seed for replicability. It is why the bias using the **tmle** R-package decreases from 0.7354 to 0.6979.
 
-#R-TMLE decreasing bias by calling more advanced machine-learning libraries
+# R-TMLE decreasing bias by calling more advanced machine-learning libraries
 
 In addition to the default algorithms implemented in the R-tmle package, we can even decrease more the bias of our estimation by calling more efficient machine learing algorithms, such as generalized additive models, Random Forest and, Recursive Partitioning and Regression Trees:    
 
@@ -461,30 +503,13 @@ cat("\n SL.TMLER.Psi_bias:", abs(True_Psi-SL.TMLER.Psi$estimates[[2]][[1]]))
 cat("\n Relative_SL.TMLER.Psi_bias:",abs(True_Psi-SL.TMLER.Psi$estimates[[2]][[1]])/True_Psi*100,"%")
 ```
 
-#Conclusions
+# Conclusions
 We have demonstrated:  
 
 1. **TMLE excels** the AIPTW estimator and,    
 2. TMLE **best performance** is obtained when calling more advanced **Super-Learner** algorithms.     
  
-# Appendix One
-Efron in 1982 showed that the empirical **Influence Curve** estimate of standard error is the same as the one obtained using the **infinitesimal jackknife** and the **nonparametric delta method** [@efron1982].  
-
-1. The Delta Method uses the first order of the Taylor series expansion: 
-$$f(x) \approx f(x)\,-\,f(\mu)\,+\,(x\,-\,\mu)f'(\mu);$$   
-where $f'(\mu)$ is the derivative of the function with respect to X evaluated at the mean of X. Therefore, squaring both terms, the variance is approximately estimate as follwos:
-$$\text{E}[f(x)-f(\mu)]^{2}\approx \text{E}(x\,-\,\mu)^{2}\,\times\,[f'(\mu)]^{2};$$
-The left-hand side of the above equation is approximately the variance of $f(x)$ and applied to the empirical distribution of X, the sample estimate of variance for X replaces:
-$$\text{E}(x_{i}\,-\,\mu)^{2}.$$
-The infinitesimal jackknife estimate of the standard error is defined as follows:
-$$SD_{ij}(\theta_{e})\,=\,\left(\frac{\sum_{i=1}^{n}U_{i}^{2}}{n^{2}}\right)^{1/2};$$
-where $\theta_{e}$ is the estimate of the parameter $\theta$ and $U_{i}$ is a **directional derivative** in the direction of the *i*th coordinate centered at the mean of the empirical distribution function.
-
-![](Figures/IC.png)
-**Figure 3**. Estimate of the $\psi$ Standard Error using the efficient Influence Curve.  
-**Image credit**: Miguel Angel Luque-Fernandez. 
-
-#Appendix Two
+# Appendix 
 With TMLE we can call the R-package **Super-Learner (SL)**. The *SL* uses **cross-validation** and **ensembled learning** (using all the predictions of multiple stacked learning algorithms) techniques to improve model prediction performance [@breiman1996].  
 
 The **SL** algorithm provides a system based on V-fold cross-validation [@efron1983] (10-folds) to combine adaptively multiple algorithms into an improved estimator, and returns a function than can be used for prediction in new datasets.  
@@ -505,7 +530,7 @@ The **SL** algorithm first split the data into ten blocks and fits each of the s
 ![](Figures/SL.png)
 **Figure 5**: Flow Diagram for the Super-Learner algorithm.  
 
-#Abbreviations
+# Abbreviations
 
 TMLE: Targeted maximum likelihood estimation  
 SL: Super Learner  
@@ -536,17 +561,17 @@ $\bar Q_{n}^{0}$: Initial estimate of $\bar Q_{0}$
 $\bar Q_{n}^{1}$: First updated estimate of $\bar Q_{0}$   
 $\bar Q_{n}^{*}$: Targeted estimate of $\bar Q_{n}^{0}$ in TMLE procedure; $\bar Q_{n}^{*}$ may equal $\bar Q_{n}^{1}$  
 
-#Session Info 
-```{r session-info, results ='markup'}
+# Session Info 
+```{r session-info, results ='markup', echo = TRUE}
 devtools::session_info()
 ```
 
-#Thank you  
+# Thank you  
 Thank you for participating in this tutorial.  
 If you have updates or changes that you would like to make, please send <a href="https://github.com/migariane/MALF" target="_blank">me</a> a pull request.
 Alternatively, if you have any questions, please e-mail me. 
 You can cite this repository as:        
-Luque-Fernandez MA, (2017). Taregeted Maximum Likelihood Estimation for a Binary Outcome: Tutorial and Guided Implementation. GitHub repository, http://migariane.github.io/TMLE.nb.html.    
+Luque-Fernandez MA, (2019). Taregeted Maximum Likelihood Estimation for a Binary Outcome: Tutorial and Guided Implementation. GitHub repository, http://migariane.github.io/TMLE.nb.html.    
 **Miguel Angel Luque Fernandez**     
 **E-mail:** *miguel-angel.luque at lshtm.ac.uk*  
 **Twitter** `@WATZILEI`  
